--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,9 @@
             {%- if site.resume -%}
             <li><a class="u-email" href="{{ site.resume }}" target="_blank">Download resume</a></li>
             {%- endif -%}
+            {%- if site.leetcode -%}
+            <li><a class="u-email" href="{{ site.leetcode }}" target="_blank">Checkout my leetcode profile!</a></li>
+            {%- endif -%}
         </ul>
       </div>
 
